refactor: 内联已删工具类，配置迁移为 JSON，移除 cbr 棋谱支持
- 删除 StringUtils/MathUtils/DateUtils/ExecutorsUtils/SingleLock/WorkerTask/LocalBook，调用点内联等价实现
- Properties 由 Java 序列化改为 JSON 存储，新增手写 JsonPropertiesCodec（无第三方依赖）；
  旧二进制 properties 文件重命名为 .legacy.bak 备份后回退默认配置
- HttpUtils 重写为 java.net.http.HttpClient
- 移除 cbr 格式支持（CbrChessManualImpl 与文件过滤项）
- LocalBookController 改用 TableView<String>
- Controller 三个模式按钮合并为 toggleMode；XiangqiUtils 抽取 lineClear/lineObstructions
- drawStepTips 旋转角补 +180°，箭头指向与行棋方向一致
- 新增 AGENTS.md 项目说明